# parallel_benchmark

./: CMakeLists.txt  CMakePresets.json
benchmark/: CMakeLists.txt  multiply_benchmark.cuh
benchmark/multiply/: BM_Multiply.hpp  CMakeLists.txt  CudaExecutor_multiply_benchmark.cu  DeviceMultiplyBenchmarker.cuh  MultiplyBenchmarker.hpp  ParExecDeviceMultiplyBenchmarker.cuh  ParExecMultiplyBenchmarker.hpp  REPEAT.hpp  SingleThreadedExecutor_multiply_benchmark.cpp  ThreadPoolExecutor_multiply_benchmark.cpp  VectorDeviceMultiplyTest.cuh  VectorMultiplyTest.hpp  bm_device_multiply.cuh  bm_multiply.hpp  cuda_device_multiply_benchmark.cu  cuda_multiply_benchmark.cpp  multiply_benchmark.cpp.in  noop_multiply_benchmark.cpp  par_exec_multiply_benchmark.cpp.in  par_std_transform_multiply_benchmark.cpp  single_threaded_multiply_benchmark.cpp  std_transform_multiply_benchmark.cpp  warmup_binary.hpp  warmup_binary_benchmark.cpp
include/: Multiplier.hpp  NoOp.hpp  synchronize.hpp
include/ParallelExecutor/: CudaErrorCheck.cuh  CudaExecutor.cuh  ParallelExecutor.hpp  SingleThreadedExecutor.hpp  ThreadPoolExecutor.hpp
include/multiply/: ThreadPoolExecutorTemplate.hpp  cuda_multiply.cuh  multiply.hpp  par_exec_multiply.hpp
src/: CMakeLists.txt  get_par_exec_properties.cmake  multiply.cuh  multiply_benchmark.cpp  parallel_benchmark.cu
src/multiply/: CMakeLists.txt  ParD_multiply.cpp.in  ParD_multiply.hpp.in  ParExec_multiply.cpp.in  ParExec_multiply.hpp.in  ParX_multiply.cpp.in  SingleThreadedExecutor_multiply.cpp  ThreadPoolExecutor_multiply.cpp.in  ThreadPool_multiply.hpp.in  cuda_device_multiply.cu  cuda_host_multiply.cu.in  cuda_host_multiply.cuh.in  cuda_host_multiply.hpp.in  cuda_multiply.cu  cuda_multiply.cu.in  cuda_multiply.hpp.in  multiply.hpp.in  par_std_transform_multiply.cpp  single_threaded_multiply.cpp  std_transform_multiply.cpp
test/multiply/: CMakeLists.txt  CudaExecutor_test.cu  DeviceMultiplyTest.cuh  MultiplyTest.hpp  ParExecDeviceMultiplyTest.cuh  ParExecMultiplyTest.hpp  SingleThreadedExecutor_test.cpp  ThreadPoolExecutor_test.cpp  cuda_device_multiply_test.cu  multiply_test.cpp  multiply_test.cpp.in  par_exec_multiply_test.cpp.in
